Add javaOptions parameter to StartBrooklynMojo